--- a/README.adoc
+++ b/README.adoc
@@ -20,7 +20,7 @@ Add hand-written AsciiDoc content into the folder `src/docs/asciidoc` and includ
 \include::{generated}/definitions.adoc[]
 ```
 
-The Asciidoctor attribute `{generated}` is set by the Gradle script to `build/asciidoc`.
+The Asciidoctor attribute `{generated}` is set by the Gradle script to `build/asciidoc`. By default the Swagger2Markup Gradle plugin creates the the AsciiDoc files into the `build/asciidoc` folder.
 
 
 === Convert AsciiDoc into HTML
