--- a/README.adoc
+++ b/README.adoc
@@ -20,17 +20,17 @@ Add hand-written AsciiDoc content into the folder `src/docs/asciidoc` and includ
 \include::{generated}/definitions.adoc[]
 ```
 
-The Asciidoctor attribute `{generated}` is set by the Gradle script to `build/asciidoc`. By default the Swagger2Markup Gradle plugin creates the the AsciiDoc files into the `build/asciidoc` folder.
+The Asciidoctor attribute `{generated}` is set by the Gradle script to `build/asciidoc`. By default the Swagger2Markup Gradle plugin creates the the generated AsciiDoc files into the `build/asciidoc` folder.
 
 
-=== Convert AsciiDoc into HTML
+=== Convert AsciiDoc to HTML
 
 [source]
 ----
 gradlew asciidoctor
 ----
 
-See `build/asciidoc/html5/index.html` to check the generated HTML report.
+Check `build/asciidoc/html5/index.html` to see the generated HTML report.
 
 === Watch AsciiDoc files
 
