--- a/src/docs/asciidoc/extensions/paths/document-begin-text.adoc
+++ b/src/docs/asciidoc/extensions/paths/document-begin-text.adoc
@@ -1,3 +1,6 @@
-== Document begin hook
+:name: \{name}
+:cluster: \{cluster}
+:node: \{node}
+:request: \{request}
 
-Dummy text in document begin hook
+// Dummy attributes for path parameters
